# reserch-yew

.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
workspace/: Cargo.toml  Trunk.toml  index.html  serve.bash  style.css
workspace/.cargo/: config.toml
workspace/advance/: cube.rs  mod.rs  three_d_run.rs  uniform.rs
workspace/shader/cube/: fragment.wgsl  vertex.wgsl
workspace/src/: lib.rs  vertex.rs
workspace/src/camera/: camera.rs
workspace/src/component/: all.rs  drag_drop_fields.rs  hello.rs  mod.rs
workspace/src/utils/: init.rs  mod.rs  request_animation_frame_extends.rs
