[package]
name = "yew-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gloo = "0.11.0"
wasm-bindgen = "0.2.97"
wasm-bindgen-futures = "0.4.47"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.74",features = [
    "Element",
    "Document",
    "HtmlCanvasElement",
    "Event",
    "EventListener",
    "EventTarget",
    "KeyboardEvent",
    "KeyEvent",
    "AddEventListenerOptions"
] }
wee_alloc = "0.4.5"
wgpu = "23.0.1"
yew = { version = "0.21.0", features = ["csr"] }
log = "0.4.22"
bytemuck = { version = "1.20.0",features = ["derive"] }
cgmath = "0.18.0"
chrono = "0.4.38"
web-time = "1.1.0"
form-yew = "0.1.1"
stylist = { version = "0.13.0", features = ["yew_integration"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false